build(demo): compile the demo on Java 8 too
Skija supports Java 8, so drop the demo's release=11 override and replace its
JDK 9+ calls: Path.of -> Paths.get, InputStream.readAllBytes -> a drain loop,
String.isBlank -> trim().isEmpty(), and ProcessHandle.current().pid() ->
parsing the RuntimeMXBean name. The whole reactor now builds with release=8.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>